<resources>
    <string name="app_name">HotelHub</string>
    <string name="title_activity_home_ospite">HomeOspiteActivity</string>
    <string name="Profilo">Profilo</string>
    <string name="lingua">Lingua</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotelhub">HotelHub</string>
    <string name="home">Home</string>
    <string name="prenota">Prenota</string>
    <string name="ristorante">Ristorante</string>
    <string name="loungebar">Lounge Bar</string>
    <string name="sauna">Sauna</string>
    <string name="piscina">Piscina</string>
    <string name="dogcare">Dog Care</string>
    <string name="arearelax">Area Relax</string>
    <string name="lavanderia">Lavanderia</string>
    <string name="libreria">Libreria</string>
    <string name="info">Info</string>
    <string name="modifica">Modifica</string>
    <string name="nome">Nome:</string>
    <string name="cognome">Cognome:</string>
    <string name="email">Email:</string>
    <string name="log_out">Log Out</string>
    <string name="support_message">Per prenotazione camere e supporto</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="mostra_password">Mostra Password</string>
    <string name="salva_modifiche">Salva modifiche</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="registrazione">Registrazione</string>
    <string name="hai_dimenticato_la_password">Hai dimenticato la password?</string>
    <string name="servizio_camera">Servizio in Camera</string>
    <string name="sfoglia_con_crema_e_frutti_di_bosco">Sfoglia con Crema e Frutti di Bosco</string>
    <string name="primi_piatti">Primi Piatti</string>
    <string name="carbonara">Carbonara</string>
    <string name="qty">Qtà</string>
    <string name="amatriciana">Amatriciana</string>
    <string name="lasagne">Lasagne</string>
    <string name="secondi_piatti">Secondi Piatti</string>
    <string name="carpaccio_al_pepe_verde">Carpaccio al Pepe Verde</string>
    <string name="cotoletta_alla_milanese">Cotoletta alla Milanese</string>
    <string name="tagliata_di_carne">Tagliata di Carne</string>
    <string name="contorni">Contorni</string>
    <string name="insalata_mista">Insalata Mista</string>
    <string name="patatine_fritte">Patatine Fritte</string>
    <string name="verdure_grigliate">Verdure Grigliate</string>
    <string name="dessert">Dessert</string>
    <string name="tortino_cuore_caldo_al_cioccolato">Tortino Cuore Caldo al Cioccolato</string>
    <string name="tiramis">Tiramisù</string>
    <string name="vai_al_resoconto">Vai al resoconto</string>
    <string name="conferma">Conferma</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="prenotazioni_effettuate">Prenotazioni Effettuate</string>
    <string name="nessuna_prenotazione_effettuata">Nessuna prenotazione effettuata</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="numero_camera">Numero Camera:</string>
    <string name="nessun_servizio_in_camera_richiesto">Nessun Servizio In Camera Richiesto</string>
    <string name="recensioni">Recensioni</string>
    <string name="ubicazione"><b>Ubicazione:</b></string>
    <string name="interno"><b>Interno:</b></string>
    <string name="secondo_piano">Secondo piano</string>
    <string name="piano_terra">Area Est Esterna</string>
    <string name="quinto_piano">Quinto piano</string>
    <string name="seminterrato">Seminterrato</string>
    <string name="ingresso">Ingresso</string>
    <string name="string_ristorante">Ristorante con vista panoramica sull\'incantevole Golfo di Petrosino che offre la possibilità di degustare i piatti della cucina locale, fatta di profumati aromi e golose fragranze e con un\'accurata selezione di pietanze nazionali ed internazionali. \n<b>PICCOLA COLAZIONE</b> La prima colazione è a buffet con un ampia scelta tra dolce e salato, dalle ore 7.00 alle ore 10.00. Su richiesta, ordinare alla reception o in sala ristorante, una piccola colazione al sacco. \n<b>CENA</b> La cena con menu a scelta è servita dalle ore 18.45 alle 21.00. \nMenu personalizzati per clienti con particolari esigenze. \nSi invita i Signori ad indossare pantaloni lunghi. \nTutte le bevande ordinate al ristorante vanno consumate durante la cena.</string>
    <string name="string_lounge_bar">Lounge bar con affaccio sull\'indimenticabile Golfo di Petrosino, proponendo un\'esperienza di degustazione unica tra i sapori distintivi dei cocktail tradizionali e innovativi. Creato con l\'intenzione di risvegliare i sensi e accompagnato da una scelta attenta di bevande nazionali ed internazionali. \n<b>APERITIVO</b> L\'aperitivo viene servito dalle 17.00 alle 19.00, con un\'ampia selezione di stuzzichini sia dolci che salati. Su richiesta, è possibile ordinare al bar o alla reception un aperitivo da asporto. \n<b>ORARIO BAR</b> Il bar è aperto dalle 10.00 alle 24.00, fornendo un servizio continuo di bevande e snack. \nMenù personalizzati disponibili per i clienti con esigenze specifiche. \nTutte le bevande ordinate al bar devono essere consumate durante la permanenza.</string>
    <string name="string_sauna">Sauna panoramica con vista sull\'affascinante Golfo di Petrosino, offrendo un\'esperienza di benessere totale attraverso il calore e gli aromi. L\'ambiente è caratterizzato da un design moderno e da una selezione accurata di programmi benessere, sia tradizionali che internazionali. \n<b>ORARIO SAUNA</b> La sauna è aperta dalle ore 10.00 alle ore 20.00, con la possibilità di prenotare sessioni private. Su richiesta, è possibile ordinare alla reception un pacchetto wellness personalizzato. \n<b>PROGRAMMI PERSONALIZZATI</b> Programmi sauna personalizzati sono disponibili per ospiti con particolari esigenze o preferenze. \nSi invita i Signori a rispettare le regole della sauna. \nTutti i trattamenti e servizi ordinati devono essere consumati durante il soggiorno.</string>
    <string name="string_piscina">Swimming pool with panoramic view of the fascinating Gulf of Petrosino, offering a relaxation and fun experience immersed in crystal clear water. The pool is framed by an aesthetic design and is equipped with comfortable deck chairs and umbrellas. \n<b>POOL HOURS</b> The swimming pool is open from 9:00 am to 7:00 pm, allowing guests to enjoy a refreshing swim or relax in the sun. \n<b>POOL SNACK BAR</b> On request, you can order a snack service with a selection of snacks and drinks at the reception or directly at the pool. \n<b>POOL ACTIVITIES</b> We organize water aerobics sessions and personalized swimming courses for guests with special needs or preferences. \nGentlemen are invited to wear appropriate swimwear.</string>
    <string name="string_dog_care">Servizio di dog care dedicato, pensato per garantire il massimo del confort e dell\'attenzione al tuo amico a quattro zampe durante tutto il soggiorno. Forniamo un\'ampia gamma di servizi, che includono attività personalizzate, giochi e trattamenti di grooming. \n<b>DISPONIBILITÀ</b> Il servizio di dog care è disponibile 24 ore su 24, per garantire un\'assistenza continua per il tuo animale domestico durante tutto il soggiorno. \n<b>PACCHETTI DOG CARE</b> Su richiesta, è possibile organizzare alla reception un pacchetto di dog care personalizzato, adatto alle esigenze del tuo amico peloso. \n<b>TRATTAMENTI PERSONALIZZATI</b> Trattamenti personalizzati sono disponibili per cani con particolari esigenze o preferenze. </string>
    <string name="string_area_relax">Area Relax dove il divertimento incontra la nostalgia. Goditi una varietà di videogiochi degli anni \'90, sfida i tuoi amici a un gioco di biliardo, immergiti in una partita di ping pong o rilassati con uno dei nostri numerosi giochi da tavolo. Un luogo ideale per rilassarsi, socializzare e divertirsi. \n<b>DISPONIBILITÀ</b> L\'area relax è aperta 24 ore su 24, per permetterti di goderti il tuo tempo libero quando preferisci durante il tuo soggiorno. \n<b>ATTIVITÀ</b> Sono disponibili una varietà di attività, che includono tavoli da biliardo, ping pong, giochi da tavolo e una selezione di videogiochi vintage. \n<b>PERSONALIZZAZIONI</b> Su richiesta, è possibile organizzare alla reception tornei o eventi di giochi personalizzati. </string>
    <string name="string_lavanderia">Servizio di lavanderia attento e professionale, pronto a soddisfare tutte le tue esigenze di pulizia e cura dei capi. Disponiamo di una vasta gamma di opzioni, dalla lavanderia generale al lavaggio delicato, all\'asciugatura e al servizio di stiratura. \n<b>ORARIO LAVANDERIA</b> Il servizio di lavanderia è disponibile 24 ore su 24, per garantire un supporto continuo durante tutto il soggiorno. \n<b>SERVIZIO LAMPO</b> Su richiesta, offriamo un servizio lampo per inconvenienti dell\'ultimo minuto, garantendo un lavaggio, asciugatura e stiratura rapido per i tuoi capi.</string>
    <string name="string_libreria">La nostra libreria situata nella hall offre un\'ampia gamma di libri per il tuo piacere di lettura. Che tu preferisca romanzi, saggi, thriller o libri per bambini, abbiamo qualcosa per tutti i gusti. \n<b>ORARIO LIBRERIA</b> La libreria è accessibile 24 ore su 24, permettendoti di scegliere un libro in qualsiasi momento durante il tuo soggiorno. \n<b>LETTURA GRATUITA</b> Tutti i libri sono disponibili per la lettura gratuita durante la permanenza, offrendo un modo rilassante per passare il tempo o per immergerti in una nuova avventura. \n<b>SERVIZIO PERSONALIZZATO</b> Su richiesta, il nostro personale può aiutarti a scegliere un libro che corrisponda ai tuoi interessi o esigenze di lettura. \nSi prega di rispettare le regole della libreria per garantire un\'esperienza piacevole per tutti i nostri ospiti. \nTutti i libri presi in prestito devono essere restituiti prima della partenza.</string>
    <string name="hint_nome">Inserisci il tuo nome</string>
    <string name="hint_cognome">Inserisci il tuo cognome</string>
    <string name="hint_numero_carta">Inserisci il numero della carta</string>
    <string name="hint_cvv">Inserisci il CVV</string>
    <string name="text_nome">Nome:</string>
    <string name="text_cognome">Cognome:</string>
    <string name="text_numero_carta">Numero Carta:</string>
    <string name="text_cvv">CVV:</string>
    <string name="text_data_check_in">Data Check-In</string>
    <string name="text_data_check_out">Data Check-Out</string>
    <string name="button_fatturazione">Vai alla Fatturazione</string>
    <string name="button_conferma">Conferma</string>
    <string name="priceLabel">Prezzo:</string>
    <string name="camera_type_1">Camera Singola</string>
    <string name="camera_type_2">Camera Doppia</string>
    <string name="camera_type_3">Camera Familiare</string>
    <string name="exit_confirmation_message">Premi di nuovo indietro per uscire dall\'app</string>
    <string name="toast_passwords_do_not_match">Le password non corrispondono.</string>
    <string name="toast_data_updated_successfully">Dati aggiornati correttamente.</string>
    <string name="toast_data_update_error">Errore durante l\'aggiornamento dei dati online.</string>
    <string name="toast_connection_error">Errore di connessione. Riprova.</string>
    <string name="toast_payment_data_invalid">Inserisci correttamente i dati del pagamento.</string>
    <string name="toast_booking_success">Prenotazione effettuata con successo!</string>
    <string name="toast_booking_error">Errore durante la prenotazione. Riprova.</string>
    <string name="toast_room_unavailable">Questo tipo di camera non è disponibile per le date selezionate.</string>
    <string name="toast_checkin_cannot_be_after_checkout">La data di check-in non può essere successiva o uguale alla data di check-out. Si prega di selezionare di nuovo la data di check-out.</string>
</resources>