<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuhome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
    android:id="@+id/menuProfile"
    android:icon="@drawable/baseline_person_24"
    android:title="@string/Profilo"
        />
    <item
        android:id="@+id/menuLanguage"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/lingua"
        />
    <item
        android:id="@+id/menuPrenotazione"
        android:icon="@drawable/baseline_bed_24"
        android:title="@string/prenota"
        />
    <item
        android:id="@+id/menuServizioCamera"
        android:icon="@drawable/baseline_room_service_24"
        android:title="@string/servizio_camera" />
    <item
        android:id="@+id/menuPrenotazioniEffettuate"
        android:icon="@drawable/baseline_bedroom_parent_24"
        android:title="@string/prenotazioni_effettuate" />
    <item
        android:id="@+id/menuInfo"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/info" />
    <item
        android:id="@+id/menuLogOut"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out" />



</menu>